# primitive-agilex-piper-arm-rbnx

./: .gitignore  README.md  package_manifest.yaml
capabilities/primitive/arm/: arm_status.v1.toml  driver.v1.toml  end_pose.v1.toml  joint_command.v1.toml  joint_states.v1.toml  pos_cmd.v1.toml  pos_command.v1.toml
piper_ctl/: __init__.py  main.py
scripts/: build.sh  can_activate.sh  find_all_can_port.sh  start.sh
src/graspnet_msgs/: CMakeLists.txt  package.xml
src/graspnet_msgs/msg/: GraspPose.msg
src/piper/: package.xml  setup.py
src/piper/launch/: graspnet_to_poscmd.launch.py  start_single_piper.launch.py
src/piper/piper/: graspnet_to_poscmd_node.py  piper_ctrl_single_node.py
